# lantern

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  checklist.txt
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Findlibtommath.cmake
cmake/picotls/: dtrace-utils.cmake
docker/: entrypoint.sh
include/lantern/: client.h  enr.h  genesis.h  rlp.h  string_list.h
include/lantern/consensus/: containers.h  duties.h  fork_choice.h  hash.h  quorum.h  runtime.h  signature.h  slot_clock.h  ssz.h  state.h
include/lantern/core/: client.h
include/lantern/core/client/: options.h  types.h
include/lantern/crypto/: hash_sig.h
include/lantern/encoding/: snappy.h
include/lantern/genesis/: genesis.h
include/lantern/http/: common.h  metrics.h  server.h
include/lantern/metrics/: lean_metrics.h
include/lantern/networking/: enr.h  gossip.h  gossip_payloads.h  gossipsub_service.h  libp2p.h  messages.h  reqresp_service.h
include/lantern/storage/: storage.h
include/lantern/support/: log.h  secure_mem.h  strings.h  time.h
internal-docs/: lantern-devnet-docker-progress.md  status.txt
scripts/: bootstrap.sh  build.sh  run_with_timeout.py
scripts/fixtures/: generate_devnet_payloads.py  generate_networking_ssz.py  generate_ssz_vectors.py
src/: client.c  enr.c  genesis.c  main.c  rlp.c  string_list.c
src/consensus/: containers.c  duties.c  fork_choice.c  hash.c  runtime.c  signature.c  slot_clock.c  ssz.c  state.c
src/core/: client.c  main.c
src/core/client/: common.c  common.h  http_handlers.c  http_handlers.h  options.c  validator_service.c  validator_service.h
src/crypto/: hash_sig.c
src/encoding/: rlp.c  snappy.c
src/genesis/: genesis.c
src/http/: common.c  metrics.c  server.c
src/internal/: strings.c  strings.h  yaml_parser.c  yaml_parser.h
src/metrics/: lean_metrics.c
src/networking/: enr.c  gossip.c  gossip_payloads.c  gossipsub_service.c  libp2p.c  messages.c  reqresp_service.c
src/storage/: storage.c
src/support/: log.c  secure_mem.c  string_list.c  strings.c  time.c
tests/fixtures/: generate_devnet_payloads.py  generate_ssz_vectors.py  ssz_signature_vectors.h  ssz_vectors.h  state.ssz
tests/fixtures/consensus/consensus/fork_choice/devnet/fc/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
tests/fixtures/consensus/consensus/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  (+1 more)
tests/fixtures/consensus/fork_choice/devnet/fc/test_attestation_processing/: test_attestation_accumulation_full_validator_set.json  test_attestation_superseding_same_validator.json  test_attestations_move_to_known_between_blocks.json  test_extended_chain_attestation_superseding_pattern.json  test_proposer_attestation_appears_in_latest_new.json  test_slot_gaps_with_attestation_superseding.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_attestation_target_selection/: test_attestation_target_advances_with_attestations.json  test_attestation_target_at_genesis_initially.json  test_attestation_target_justifiable_constraint.json  test_attestation_target_with_extended_chain.json  test_attestation_target_with_slot_gaps.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_fork_choice_head/: test_head_advances_through_deep_chain.json  test_head_switches_to_heavier_fork.json  test_head_with_deep_fork_split.json  test_head_with_gaps_in_slots.json  test_head_with_large_gaps.json  test_head_with_two_competing_forks.json
tests/fixtures/consensus/fork_choice/devnet/fc/test_fork_choice_reorgs/: test_back_and_forth_reorg_oscillation.json  test_reorg_on_newly_justified_slot.json  test_reorg_prevention_heavy_fork_resists_light_competition.json  test_reorg_with_slot_gaps.json  test_simple_one_block_reorg.json  test_three_block_deep_reorg.json  test_three_way_fork_competition.json  test_two_block_reorg_progressive_building.json
tests/fixtures/consensus/state_transition/devnet/stf_examples/test_blocks/: test_single_empty_block.json
tests/fixtures/consensus/state_transition/devnet/stf_examples/test_invalid/: test_invalid_proposer.json
tests/fixtures/devnet0/: block_slot6.json  block_slot6.meta.json  block_slot6.ssz  block_slot6.ssz_snappy  block_slot7.json  block_slot7.meta.json  block_slot7.ssz  block_slot7.ssz_snappy
tests/fixtures/genesis/: config.yaml  genesis.ssz  nodes.yaml  validator-config.yaml  validators.yaml
tests/fixtures/genesis/hash-sig-keys/: validator_0_pk.json  validator_1_pk.json  validator_2_pk.json  validator_3_pk.json  validator_4_pk.json
tests/fixtures/networking/: blocks_by_root_response_leanspec.ssz  gossip_signed_block_leanspec.snappy  gossip_signed_block_leanspec.ssz  gossip_signed_vote_leanspec.snappy  gossip_signed_vote_leanspec.ssz  status_leanspec.ssz
tests/integration/: consensus_fixture_runner.c  fixture_runner.h  test_consensus_vectors.c  test_genesis_vectors.c  test_validator_duties.c
tests/support/: fixture_loader.c  fixture_loader.h
tests/unit/: client_test_helpers.c  client_test_helpers.h  test_client.c  test_client_pending.c  test_client_vote.c  test_consensus_runtime.c  test_duties.c  test_enr.c  test_fork_choice.c  test_genesis_bootstrap.c  test_libp2p.c  test_metrics.c  test_networking_messages.c  test_rlp.c  test_signature.c  test_slot_clock.c  test_snappy.c  test_ssz.c  test_state.c  test_storage.c  test_validator_selection.c
tools/debug/: fix_genesis_state.c  generate_gossip_snappy.c  generate_lean_genesis.py  inspect_block.c  inspect_genesis.c  lantern_gdb.sh  repro_genesis_transition.c  repro_transition.c  run-lantern-gdb.sh
(+28 files in other folders)
